--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?82194442');
-  src: url('../font/fontello.eot?82194442#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?82194442') format('woff2'),
-       url('../font/fontello.woff?82194442') format('woff'),
-       url('../font/fontello.ttf?82194442') format('truetype'),
-       url('../font/fontello.svg?82194442#fontello') format('svg');
+  src: url('../font/fontello.eot?62853479');
+  src: url('../font/fontello.eot?62853479#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?62853479') format('woff2'),
+       url('../font/fontello.woff?62853479') format('woff'),
+       url('../font/fontello.ttf?62853479') format('truetype'),
+       url('../font/fontello.svg?62853479#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?82194442#fontello') format('svg');
+    src: url('../font/fontello.svg?62853479#fontello') format('svg');
   }
 }
 */
@@ -72,8 +72,10 @@
 .icon-dollar:before { content: '\f155'; } /* '' */
 .icon-cab:before { content: '\f1b9'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
 .icon-envira:before { content: '\f299'; } /* '' */
 .icon-question-circle-o:before { content: '\f29c'; } /* '' */
 .icon-handshake-o:before { content: '\f2b5'; } /* '' */
 .icon-id-card:before { content: '\f2c2'; } /* '' */
 .icon-id-card-o:before { content: '\f2c3'; } /* '' */
+.icon-instagram-filled:before { content: '\f31f'; } /* '' */
