--- a/css/style.css
+++ b/css/style.css
@@ -603,20 +603,23 @@ footer p{
 .icon-location{
     color: red;
     font-size: 30px;
-    display: block;
-    float: left;
+    /* display: block;
+    float: left; */
 }
 
-.icon-location::after{
-    display: block;
+/* .icon-location::after{ */
+    /* display: block;
     content: '';
-    clear: both;
-}
+    clear: both; */
+/* } */
 
-.icon-phone, .icon-mail-alt{
+.icon-phone, .icon-mail-alt, .icon-home{
     padding-right: 5px;
     font-size: 18px;
     color: #34495e;
+}
+.icon-home{
+    font-size: 24px;
 }
 /* =================PAGE NEWS/PUBLICATION=========== */
 .body-news{
@@ -625,6 +628,7 @@ footer p{
 .p-head-breadcrumb{
     background:#34495e;
     width: 100%;
+    margin-bottom: 40px;
 }
 
 .p-head-breadcrumb h2{
@@ -722,7 +726,7 @@ footer p{
     margin-top: 40px;
 }
 .archive a{
-    color: #444e67;
+    color: #444e67;   
 }
 .archive a:hover{
     color: rgba(242, 121, 0, 1)
@@ -781,7 +785,11 @@ footer p{
 
 .power-contacts ul li a{
     color: #000;
-    font-size: 16px;
+    font-size: 16px;    
+}
+
+.power-contacts ul li a:hover{
+    text-decoration: underline;
 }
 
 .power-claim p{
@@ -825,43 +833,76 @@ footer p{
 }
 
 /*==================== PRODUCTION PAGE=============== */
-/* .icon{
-    width: 100px;
-    height: 100px;
-    background: rgba(242, 121, 0, 1);
-    border-radius: 50%;
-    position: relative;
-    left: 50%;
-    margin-left: -50px;
-    top: 50px;
-}
-.icon i{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    color: #000;
-    font-size: 40px;
-    margin-left: -20px;
-    margin-top: -35px;
-}
-.icon i::before{
-    margin: 0;
-}
-.production-info p{
-    display: block;
-    border: 1px solid rgba(177, 177, 177, 0.603);
-    padding: 55px 25px 20px;
-    text-align: justify;
-    color: #5d6168;
-    text-align: center;
-}
-.production-info .col-6 p{
-    min-height: 350px;
-} */
 .production-section{
-    margin-top: 60px;
+    margin: 60px 0;    
+}
+
+.production-section .row{
+    /* border-bottom: 1px solid #000; */
+    padding-bottom: 40px;
 }
 
 .production-img img{
     width: 100%;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+}
+.production-section ul li{
+    font-size: 16px;
+    color: #9e9e9e;
+}
+
+hr{
+    background: url(../img/hr.png) no-repeat scroll 50% 0 transparent;
+    border: medium none;
+    height: 19px;
+    /* height: 1px;
+    background: rgba(0,0,0,.1); */
+    margin: 60px 0;
+}
+
+.production-section p{
+    text-align: justify;
+}
+
+.production-section .col-8 p{
+    color: #9e9e9e;
+}
+
+.production-section .col-8 p b{
+    color: #000;
+}
+/*===================== PAGE SOCIAL=============== */
+.social-section{
+    font-family: 'Roboto', sans-serif;
+    /* margin: 40px 0; */
+}
+
+.social-headline p, .social-headline b{
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.text-ind{
+    text-indent: 30px;
+}
+
+.social-section img{
+    width: 100%;
+    box-shadow: 5px 5px 5px rgba(0,0,0,.5);
+}
+
+.social-icons{
+    display: flex;
+}
+.social-icons i{
+    font-size: 40px;
+    color: #34495e;
+}
+.social-icons i:hover{
+    color: rgba(242, 121, 0, .8);
+    /* color: #000; */
+}
+.social-section .icon-facebook-official{
+    /* font-size: 45px !important; */
+    /* padding-bottom: 5px; */
 }
