--- a/css/style.css
+++ b/css/style.css
@@ -144,12 +144,28 @@ main{
 .carousel-caption{
     padding-bottom: 20%;
 }
+.carousel-item{
+    position: relative;
+    z-index: 1;
+}
+.carousel-item .cover-dark{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    z-index: 2;
+}
+
 .carousel-item img{
     height: 700px;
-    -moz-filter: grayscale(30%);
+    /* -moz-filter: grayscale(30%);
     -ms-filter: grayscale(30%);
     -o-filter: grayscale(30%);
-    filter: grayscale(40%); 
+    filter: grayscale(40%);  */
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 /* ====================NEWS SECTION=============== */
 .section_news{
@@ -166,7 +182,7 @@ main{
     margin-bottom: 20px;
     padding-bottom: 15px;
     position: relative;
-    font-weight: normal;
+    font-weight: bold;
     font-family: 'Roboto', sans-serif;
     color: rgba(0,0,0,0.7);
     text-shadow: 2px 2px 3px rgba(136, 130, 130, 0.911);
@@ -207,8 +223,8 @@ main{
     width: 100%;
     height: 200px;
     position: relative;
-    border-bottom: 1px solid rgba(63, 61, 61, 0.2);
-    border-radius: 5px;
+    /* border-bottom: 1px solid rgba(63, 61, 61, 0.2); */
+    /* border-radius: 5px; */
 }
 .news .news-img-section >img{
   display: block;
@@ -217,7 +233,7 @@ main{
   height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
-  border-radius: 3px;
+  /* border-radius: 3px; */
   
 }
 .news .news-bg-img{
