--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ main{
     font-size: 100px;
 }
 .parallax-text p{
-    font-size: 26px;
+    font-size: 1.7vw;
     font-weight: bold;
     color: #fff;
 }
@@ -565,7 +565,7 @@ main{
     background: #f1f1f1;
     /* background: hsla(41, 67%, 34%, 0.555); */
     padding-bottom: 40px;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .contact-from-section h2{
     text-align: center;
