--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17031662');
-  src: url('../font/fontello.eot?17031662#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17031662') format('woff2'),
-       url('../font/fontello.woff?17031662') format('woff'),
-       url('../font/fontello.ttf?17031662') format('truetype'),
-       url('../font/fontello.svg?17031662#fontello') format('svg');
+  src: url('../font/fontello.eot?80191978');
+  src: url('../font/fontello.eot?80191978#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?80191978') format('woff2'),
+       url('../font/fontello.woff?80191978') format('woff'),
+       url('../font/fontello.ttf?80191978') format('truetype'),
+       url('../font/fontello.svg?80191978#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17031662#fontello') format('svg');
+    src: url('../font/fontello.svg?80191978#fontello') format('svg');
   }
 }
 */
@@ -68,6 +68,7 @@
 .icon-phone:before { content: '\e80a'; } /* '' */
 .icon-home:before { content: '\e80b'; } /* '' */
 .icon-flight:before { content: '\e80c'; } /* '' */
+.icon-paper-plane:before { content: '\e80d'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-angle-double-right:before { content: '\f101'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
