--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?80191978');
-  src: url('../font/fontello.eot?80191978#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?80191978') format('woff2'),
-       url('../font/fontello.woff?80191978') format('woff'),
-       url('../font/fontello.ttf?80191978') format('truetype'),
-       url('../font/fontello.svg?80191978#fontello') format('svg');
+  src: url('../font/fontello.eot?82597297');
+  src: url('../font/fontello.eot?82597297#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?82597297') format('woff2'),
+       url('../font/fontello.woff?82597297') format('woff'),
+       url('../font/fontello.ttf?82597297') format('truetype'),
+       url('../font/fontello.svg?82597297#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?80191978#fontello') format('svg');
+    src: url('../font/fontello.svg?82597297#fontello') format('svg');
   }
 }
 */
@@ -72,6 +72,7 @@
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-angle-double-right:before { content: '\f101'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
+.icon-fax:before { content: '\f1ac'; } /* '' */
 .icon-cab:before { content: '\f1b9'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
 .icon-facebook-official:before { content: '\f230'; } /* '' */
