--- a/css/media.css
+++ b/css/media.css
@@ -46,20 +46,17 @@
     border-bottom: none;
     margin: 13px;
     }
-    /* .news .news-img-section >img { */
-        /* display: block; */
-        /* margin: 0 auto; */
-        /* width: 100%; */
-        /* height: 100%; */
-        /* object-fit: cover; */
-        /* object-position: 50% 50%; */
-        /* border-radius: 3px; */
-    /* } */
     .news span {
         display: inline-block;
         padding: 25px 0 15px 0px;
         font-size: 17px;
         color: rgba(242, 121, 0, 1);
+    }
+    .social-info{
+        margin-top: 20px;
+    }
+    hr{        
+        margin: 30px 0;
     }
 }
 @media screen and (max-width: 576px){
@@ -75,6 +72,7 @@
     .p-head-breadcrumb .full-width{
         min-width: 100%;
     }
+    
 }
 @media screen and (max-width: 394px){
     .navbar-brand{
