--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?82597297');
-  src: url('../font/fontello.eot?82597297#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?82597297') format('woff2'),
-       url('../font/fontello.woff?82597297') format('woff'),
-       url('../font/fontello.ttf?82597297') format('truetype'),
-       url('../font/fontello.svg?82597297#fontello') format('svg');
+  src: url('../font/fontello.eot?9883878');
+  src: url('../font/fontello.eot?9883878#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?9883878') format('woff2'),
+       url('../font/fontello.woff?9883878') format('woff'),
+       url('../font/fontello.ttf?9883878') format('truetype'),
+       url('../font/fontello.svg?9883878#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?82597297#fontello') format('svg');
+    src: url('../font/fontello.svg?9883878#fontello') format('svg');
   }
 }
 */
@@ -75,7 +75,10 @@
 .icon-fax:before { content: '\f1ac'; } /* '' */
 .icon-cab:before { content: '\f1b9'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; } /* '' */
+.icon-file-word:before { content: '\f1c2'; } /* '' */
+.icon-file-excel:before { content: '\f1c3'; } /* '' */
 .icon-facebook-official:before { content: '\f230'; } /* '' */
+.icon-map:before { content: '\f279'; } /* '' */
 .icon-envira:before { content: '\f299'; } /* '' */
 .icon-question-circle-o:before { content: '\f29c'; } /* '' */
 .icon-handshake-o:before { content: '\f2b5'; } /* '' */
