--- a/css/media.css
+++ b/css/media.css
@@ -27,6 +27,9 @@
     .production-img{
         margin-bottom: 30px;
     }
+    .aside-colspy{
+        display: none;
+    }
 }
 @media screen and (max-width: 768px){
     #carouselSliderUTN{
