--- a/css/style.css
+++ b/css/style.css
@@ -1027,6 +1027,7 @@ hr{
     background: rgba(12,13,14,0.05);
     color: #0C0D0E;
     border-right: 3px solid #F48024;
+    font-size: 15px;
 }
 .container-ecology h2{
     text-align: center;
@@ -1062,7 +1063,7 @@ hr{
 .sticky-top{
     top: 20px;
 }
-.section-policy img, .section-air-protection img{
+.section-policy img, .section-air-protection > img{
     width: 100%;
     height: 100%;
     margin-bottom: 30px;
@@ -1102,12 +1103,22 @@ hr{
 .section-air-protection h2{
     font-weight: bolder;
 }
-.ecology-link a{
-    color: red;
+.ecology-link {
+    color: red !important;
+    cursor: pointer;
 }
-.ecology-link a:hover{
-    text-decoration: underline;
+.ecology-link:hover{
+    text-decoration: underline !important; 
 }
 .ecology-link i{
     font-size: 20px;
+}
+#google-map, #google-map-water, #google-map-pt, #google-map-tbo{
+    height: 500px;
+}
+.section-woter-protection ul li i{
+    color: rgb(242, 121, 0);
+}
+.nav-ecology a{
+    font-size: 14px;
 }
