--- a/css/media.css
+++ b/css/media.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1200px){
-    .nav-link{
+    .main-menu .nav-link{
         text-align: center !important;
-        line-height: 2.5em;
+        line-height: 1em;
     }
     .nav-link:after{
         display: none;
@@ -79,6 +79,14 @@
 }
 @media screen and (max-width: 394px){
     .navbar-brand{
-        padding-right: 60px;
+        /* padding-right: 60px; */
+    }
+    .lang li{
+        display: block;
+    }
+    .lang-active{
+        border-right: 1px solid rgba(242, 121, 0, 1);
+        border-left: 1px solid rgba(242, 121, 0, 1);
+        border-bottom: 0px;
     }
 }
