--- a/css/media.css
+++ b/css/media.css
@@ -18,6 +18,9 @@
     .carousel-caption {
         padding-bottom: 30%;
     }
+    .bg-sticker-green, .bg-sticker-orange {
+        height: 403px;
+    }
 }
 @media screen and (max-width: 992px){
 
@@ -29,6 +32,9 @@
     }
     .aside-colspy{
         display: none;
+    }
+    .bg-sticker-green, .bg-sticker-orange {
+        height: 365px;
     }
 }
 @media screen and (max-width: 768px){
@@ -45,7 +51,6 @@
     float: left;
     width: 45%;
     height: 155px;
-    /* margin-top: 10px; */
     border-bottom: none;
     margin: 13px;
     }
@@ -61,6 +66,10 @@
     hr{        
         margin: 30px 0;
     }
+    .bg-sticker-green, .bg-sticker-orange {
+        height: 455px;
+        padding-top: 140px;
+    }
 }
 @media screen and (max-width: 576px){
     .navbar-brand img {
@@ -75,6 +84,10 @@
     .p-head-breadcrumb .full-width{
         min-width: 100%;
     }
+    /* .bg-sticker-green, .bg-sticker-orange {
+        width: 80%;
+    height: 425px;
+    } */
     
 }
 @media screen and (max-width: 394px){
@@ -88,5 +101,10 @@
         border-right: 1px solid rgba(242, 121, 0, 1);
         border-left: 1px solid rgba(242, 121, 0, 1);
         border-bottom: 0px;
+    }
+    .bg-sticker-green, .bg-sticker-orange {
+        padding-top: 90px;
+        padding-right: 36px;
+        height: 400px;
     }
 }
