--- a/css/style.css
+++ b/css/style.css
@@ -1226,6 +1226,11 @@ hr{
     padding-bottom: 20px;
 }
 /*----------------- PAGE CONTACTS---------- */
+.main-contacts{
+    background-image: url(../img/contacts-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 .section-contacts h3{
     text-align: center;
     font-weight: bolder;
@@ -1233,7 +1238,7 @@ hr{
     padding-bottom: 20px;
 }
 .section-contacts h5{
-    text-align: center;
+    /* text-align: center; */
     font-weight: bolder;
     color: #34495e;
     
