--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?9883878');
-  src: url('../font/fontello.eot?9883878#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?9883878') format('woff2'),
-       url('../font/fontello.woff?9883878') format('woff'),
-       url('../font/fontello.ttf?9883878') format('truetype'),
-       url('../font/fontello.svg?9883878#fontello') format('svg');
+  src: url('../font/fontello.eot?62999102');
+  src: url('../font/fontello.eot?62999102#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?62999102') format('woff2'),
+       url('../font/fontello.woff?62999102') format('woff'),
+       url('../font/fontello.ttf?62999102') format('truetype'),
+       url('../font/fontello.svg?62999102#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?9883878#fontello') format('svg');
+    src: url('../font/fontello.svg?62999102#fontello') format('svg');
   }
 }
 */
@@ -69,6 +69,7 @@
 .icon-home:before { content: '\e80b'; } /* '' */
 .icon-flight:before { content: '\e80c'; } /* '' */
 .icon-paper-plane:before { content: '\e80d'; } /* '' */
+.icon-basket:before { content: '\e80e'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-angle-double-right:before { content: '\f101'; } /* '' */
 .icon-dollar:before { content: '\f155'; } /* '' */
