change main page(add realization)

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,13 @@ button.navbar-toggler{
 /* .news {
     padding-top: 50px;
 } */
+#newsCollapse{
+    display: none;
+}
+#publicationCollapse{
+    display: none;
+}
+
 .news-h2{
     padding-top: 40px;
     text-align: center;
@@ -328,13 +335,13 @@ button.navbar-toggler{
     margin-right: 21px;
     /* color: rgba(242, 121, 0, 1); */
 }
-.trash-test{
+/* .trash-test{
     height: 1000px;
     background: rgb(201, 137, 137);
     margin-top: 1000px;
-}
+} */
 #all-publication{
-    display: none;
+    /* display: none; */
     margin: 0 !important;
     margin-top: 100px;
     /* float: right; */
