--- a/css/style.css
+++ b/css/style.css
@@ -1001,11 +1001,11 @@ footer p{
 
 .production-img img{
     width: 100%;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    /* box-shadow: 5px 5px 5px rgba(0,0,0,0.5); */
 }
 .production-section ul li{
     font-size: 16px;
-    color: #9e9e9e;
+    /* color: #9e9e9e; */
 }
 
 hr{
@@ -1231,6 +1231,7 @@ hr{
     min-width: 100px;
     display: inline-block;
 } */
+
 .about-us-chronology h4{
     text-align: center;
     padding: 30px 0;
@@ -1238,9 +1239,13 @@ hr{
 .about-us-chronology .col-2{
     font-weight: bolder;
     padding-bottom: 20px;
+    background: #AFCDE7;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.308);
 }
 .about-us-chronology .col-10{
     padding-bottom: 20px;
+    background: #D8E6F3;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.466);
 }
 .about-us-directors{
     margin-top: 50px;
@@ -1262,11 +1267,12 @@ hr{
 }
 /*----------------- PAGE CONTACTS---------- */
 .main-contacts{
-    /* background-image: url(../img/bg-white.png);
+    /* background-image: url(../img/landscape-2124022.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
-    background-color: #c9c9c9c9; */
-    background: #d9d9d9 url(../img/test-bg-2.png) center bottom no-repeat;
+    background-size: contain; */
+    /* background-color: #f8f8f8 ; */
+    /* background: #d9d9d9 url(../img/contacts-bg-2.png) left no-repeat; */
+    /* box-shadow: 0 1px 5px 0 rgba(0,0,0,.2); */
 }
 .section-contacts h3{
     text-align: center;
@@ -1315,4 +1321,53 @@ hr{
 }
 .container-white{
     background: #fff;
+}
+/* --------------PAGE ENERGY------------- */
+.energy-wrap h3 i{
+    /* font-weight: bolder; */
+    font-size: 1.5rem;
+}
+.energy-wrap h3{
+    text-align: center;
+    /* font-size: 1rem; */
+}
+.energy-wrap p{
+    text-align: justify;
+}
+.energy-wrap h5{
+    text-align: center;
+    font-weight: bolder;
+}
+.energy-wrap iframe{
+    width: 100%;
+}
+
+/*--------------- PAGE TEL-SERVICE----------------- */
+.tel-service-container{
+    padding-top: 30px;
+    padding-bottom: 600px;
+}
+.tel-service-container a h5{
+    padding-top: 10px; 
+    padding-bottom: 10px;   
+    color: #000;
+    padding-left: 20px;
+    /* text-decoration: underline; */
+    /* border-bottom: 1px solid #c9c9c9  ; */
+    background: #AFCDE7;
+    position: relative;
+}
+.tel-service-container a h5::before{
+    display: block;
+    content: '';
+    width: 10px;
+    background: rgb(242, 121, 0);
+    position: absolute;
+    left: 0;
+    height: 100%;
+    top: 0 ;
+}
+.tel-service-container a:hover h5{
+    /* text-decoration: #000 underline; */
+    background: #5a8bb5;
 }
